2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSyntaxMode.xml:
	* SyntaxModes/XmlSyntaxMode.xml:
	* SyntaxModes/JavaSyntaxMode.xml:
	* SyntaxModes/ValaSyntaxMode.xml:
	* SyntaxModes/CSharpSyntaxMode.xml:
	* SyntaxModes/JavascriptSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Match.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Hard coded the number
	regular expression for speed up.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/Keywords.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Optimized text editor
	speed & reduced memory footprint.

2009-01-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Optimized text editor
	drawing for very large chunks.

2009-01-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ClipboardActions.cs: fixed 'Bug 468808 - Cannot
	copy/paste in files'.

2009-01-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: Optimized text editor drawing when
	selection is changed.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.TextEditor.mdp:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/ISearchEngine.cs:
	* Mono.TextEditor/SearchRequest.cs:
	* Mono.TextEditor/TextEditorData.cs: Moved search parameters to a new
	SearchRequest class, this allows creating a search engine independent
	from the one provided by TextEditor.

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/FoldSegment.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs: Folding now uses a tree instead
	of a list (should speed up folding in files with many foldings).

2009-01-16  Mike Krüger  <mkrueger@novell.com>
