@@ -128,6 +128,9 @@ namespace Mono.TextEditor
 				ReadNonFloatEnd(text, ref i);
 				return i - matchOffset;
 			} else {
+				if (!Char.IsDigit (text[i]))
+					return -1;
+				i++;
 				while (i < text.Length && Char.IsDigit (text[i]))
 					i++;
 			}
@@ -137,6 +140,7 @@ namespace Mono.TextEditor
 				i++;
 				if (!Char.IsDigit (text[i]))
 					return -1;
+				i++;
 				while (i < text.Length && Char.IsDigit (text[i]))
 					i++;
 			}
